[ACS-11115] Java 17 fix
Signed-off-by: cezary-witkowski <cezary.witkowski@hyland.com>